--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
 click==8.0.1
+Cython==0.29.24
 Flask==2.0.1
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
+joblib==1.0.1
 MarkupSafe==2.0.1
+numpy==1.19.5
+pandas==1.3.0
+patsy==0.5.1
+pmdarima==1.8.2
+python-dateutil==2.8.2
+pytz==2021.1
+scikit-learn==0.24.2
+scipy==1.7.0
+six==1.16.0
+statsmodels==0.12.2
+threadpoolctl==2.2.0
+urllib3==1.26.6
 Werkzeug==2.0.1
