--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+certifi==2021.5.30
+charset-normalizer==2.0.3
 click==8.0.1
 cycler==0.10.0
 Cython==0.29.24
 Flask==2.0.1
 gunicorn==20.1.0
+idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 joblib==1.0.1
@@ -17,8 +20,10 @@ pmdarima==1.8.2
 pyparsing==2.4.7
 python-dateutil==2.8.2
 pytz==2021.1
+requests==2.26.0
 scikit-learn==0.24.2
 scipy==1.7.0
+simplejson==3.17.3
 six==1.16.0
 statsmodels==0.12.2
 threadpoolctl==2.2.0
